--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,7 @@
         <slf4j.version>2.0.16</slf4j.version>
         <log4j.version>2.24.2</log4j.version>
         <web3j.version>4.9.8-hotfix</web3j.version>
+        <junit.version>5.10.3</junit.version>
         <ethereum-node-location>http://127.0.0.1:8545</ethereum-node-location>
         <ethereum-node-web-socket-location>ws://127.0.0.1:8546</ethereum-node-web-socket-location>
     </properties>
@@ -201,9 +202,9 @@
                 <version>2.3.0.Final</version>
             </dependency>
             <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>4.13.2</version>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
+                <version>${junit.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
@@ -243,19 +244,19 @@
             <dependency>
                 <groupId>org.jboss.arquillian</groupId>
                 <artifactId>arquillian-bom</artifactId>
-                <version>1.6.0.Final</version>
+                <version>1.9.1.Final</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>org.wildfly.arquillian</groupId>
                 <artifactId>wildfly-arquillian-container-remote</artifactId>
-                <version>3.0.1.Final</version>
+                <version>4.0.1.Final</version>
             </dependency>
             <dependency>
                 <groupId>org.jboss.shrinkwrap.resolver</groupId>
                 <artifactId>shrinkwrap-resolver-bom</artifactId>
-                <version>3.1.6</version>
+                <version>3.3.2</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
