--- a/ethereum-rar-demo/src/main/webapp/WEB-INF/web.xml
+++ b/ethereum-rar-demo/src/main/webapp/WEB-INF/web.xml
@@ -31,4 +31,9 @@
         <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
 
+    <error-page>
+        <exception-type>javax.faces.application.ViewExpiredException</exception-type>
+        <location>/index.xhtml</location>
+    </error-page>
+
 </web-app>
