[maven-release-plugin] prepare release ethereum-resource-adapter-1.4.0

--- a/ethereum-ra-oracle-node/pom.xml
+++ b/ethereum-ra-oracle-node/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>be.e-contract</groupId>
         <artifactId>ethereum-resource-adapter</artifactId>
-        <version>1.4.0-SNAPSHOT</version>
+        <version>1.4.0</version>
     </parent>
     <name>Ethereum Resource Adapter Oracle Node</name>
     <groupId>be.e-contract.ethereum-resource-adapter</groupId>
@@ -24,12 +24,12 @@
         <dependency>
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
             <artifactId>ethereum-ra-oracle-spi</artifactId>
-            <version>1.4.0-SNAPSHOT</version>
+            <version>1.4.0</version>
         </dependency>
         <dependency>
             <groupId>be.e-contract.ethereum-resource-adapter</groupId>
             <artifactId>ethereum-ra-api</artifactId>
-            <version>1.4.0-SNAPSHOT</version>
+            <version>1.4.0</version>
         </dependency>
     </dependencies>
     
